--- a/index.html
+++ b/index.html
@@ -47,24 +47,25 @@
 </header>
 
 
- <!-- Hero Section (visual Dell style) -->
-<section class="hero-full d-flex align-items-center text-white" style="background-image: url('banner.png');">
+<!-- Hero Section (sem menção a desconto) -->
+<section class="hero-full d-flex align-items-center text-white" style="background-image: url('banner.png'); background-size: cover; background-position: center;">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 d-flex flex-column justify-content-center" data-sr>
-        <h5 class="text-uppercase fw-bold mb-3" style="color: #e7c85a;">Seguro Viagem</h5>
-        <h1 class="display-4 fw-bold mb-4">Viaje com a Tokio<br><span style="color: #e7c85a;">e com a mysimtravel</span></h1>
-        <p class="lead mb-3">Proteção internacional com 50% OFF<br> para quem quer tranquilidade e confiança.</p>
-        <p class="fw-bold">Cupom exclusivo: <span style="color:#00b691;">TOKIO50</span></p>
+        <h5 class="text-uppercase fw-bold mb-3" style="color: #e7c85a;">Parceria oficial</h5>
+        <h1 class="display-4 fw-bold mb-4">Viaje conectado com<br><span style="color: #e7c85a;">Tokio Marine e mysimtravel</span></h1>
+        <p class="lead mb-3">Receba seu chip internacional para navegar com tranquilidade no seu destino.</p>
+        <p class="fw-bold">Atendimento exclusivo e suporte completo para sua viagem.</p>
       </div>
     </div>
   </div>
 </section>
 
-  <!-- Section 2 - Produtos -->
 <section class="section py-5" style="background-color: #f5f7f9;">
   <div class="container text-center">
-    <h2 class="mb-5 fw-bold">Qual Seguro você precisa?</h2>
+    <h2 class="mb-3 fw-bold">Escolha o benefício ideal para sua viagem</h2>
+    <p class="mb-5 text-muted">Clientes Tokio Marine têm acesso exclusivo a chips internacionais com condições especiais. Veja qual opção é a melhor para você:</p>
+
     <div class="row justify-content-center g-4">
       <div class="col-md-6 col-lg-5">
         <div class="card seguro-card h-100 text-start">
@@ -105,51 +106,55 @@
 </section>
 
 
-  <!-- Section 3 -->
-  <section class="section py-5" id="detalhe-nacional" style="background-color: #f5f7f9;">
+
+<!-- Section 3 - Benefício exclusivo já garantido -->
+<section class="section py-5" id="detalhe-nacional" style="background-color: #f5f7f9;">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 mb-4">
-        <h2 class="fw-bold text-dark mb-3">Seguro Viagem Tokio Marine</h2>
+        <h2 class="fw-bold text-dark mb-3">Você garantiu um benefício exclusivo</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
-          Viaje com tranquilidade, proteção e o respaldo de uma das maiores seguradoras do Brasil.
+          O seu Seguro Viagem Tokio Marine inclui conectividade internacional com a mysimtravel.
         </h5>
         <p class="text-muted">
-          O <strong>Seguro Viagem Tokio Marine</strong> oferece cobertura completa para emergências médicas, assistência 24 horas, imprevistos com bagagem e muito mais. 
-          Seja qual for o destino, você conta com atendimento especializado para garantir uma experiência segura e sem preocupações.
+          Como cliente Tokio Marine, você já tem acesso ao <strong>chip internacional mysimtravel</strong> — um benefício pensado para facilitar sua jornada fora do país.
         </p>
         <p class="text-muted">
-          Aproveite cada momento da sua viagem com o suporte e a confiança de quem entende de proteção.
+          Com ele, você navega com segurança, escolhe entre chip físico ou eSIM, e ainda conta com suporte técnico completo para ativação, recarga e instalação.
+        </p>
+        <p class="text-muted">
+          Tudo isso com cobertura em mais de 150 países. Aproveite sua viagem com conectividade garantida.
         </p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="banner-2.png" class="img-fluid rounded shadow" alt="Seguro Viagem Tokio Marine">
+        <img src="banner-2.png" class="img-fluid rounded shadow" alt="Benefício chip internacional">
       </div>
     </div>
   </div>
 </section>
 
-  <!-- Section 4 -->
-  <section class="section py-5" id="detalhe-internacional">
+
+ <!-- Section 4 - Chip mysimtravel incluso -->
+<section class="section py-5" id="detalhe-internacional">
   <div class="container">
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-6 mb-4">
-        <h2 class="fw-bold text-dark mb-3">Seguro Viagem Internacional com Chip mysimtravel</h2>
+        <h2 class="fw-bold text-dark mb-3">Internet internacional incluída no seu seguro</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
-          Conecte-se ao mundo com tranquilidade, segurança e internet global.
+          Viaje com conectividade, suporte completo e praticidade.
         </h5>
         <p class="text-muted">
-          Ao contratar o <strong>Seguro Viagem Internacional</strong>, você garante cobertura para emergências médicas, extravio de bagagens e cancelamento de voos — com suporte 24 horas em qualquer parte do mundo.
+          Seu <strong>chip internacional mysimtravel</strong> está incluso como parte dos benefícios oferecidos pela Tokio Marine para clientes que já contrataram o Seguro Viagem.
         </p>
         <p class="text-muted">
-          E mais: com o <strong>chip internacional da mysimtravel</strong>, você conta com atendimento exclusivo por WhatsApp, e-mail e telefone para dúvidas, instalação, ativação, recarga e suporte técnico total durante sua viagem.
+          Você conta com suporte por WhatsApp, e-mail e telefone para ativação, instalação e recarga — tudo 100% online, com atendimento humano e especializado.
         </p>
         <p class="text-muted">
-          Esteja sempre conectado e amparado com uma solução completa em proteção e conectividade para sua jornada internacional.
+          Uma solução completa para quem deseja estar sempre conectado e bem assistido durante sua viagem.
         </p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="banner-3.png" class="img-fluid rounded shadow" alt="Seguro Viagem Internacional com Chip mysimtravel">
+        <img src="banner-3.png" class="img-fluid rounded shadow" alt="Chip mysimtravel incluso no seguro">
       </div>
     </div>
   </div>
