--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav gap-lg-4 gap-3 text-center">
         <li class="nav-item">
-          <a class="nav-link" href="#seguro-nacional">Seguro Nacional</a>
+          <a class="nav-link" href="#seguro-nacional">Chip Desconto 20%</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#detalhe-internacional">Seguro Internacional</a>
+          <a class="nav-link" href="#detalhe-internacional">Chip Grátis</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#faqAccordion">FAQ</a>
@@ -112,7 +112,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 mb-4">
-        <h2 class="fw-bold text-dark mb-3">Você garantiu um benefício exclusivo</h2>
+        <h2 class="fw-bold text-dark mb-3">Chip com 20% de desconto <br>Você garantiu um benefício exclusivo</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
           O seu Seguro Viagem Tokio Marine inclui conectividade internacional com a mysimtravel.
         </h5>
@@ -139,7 +139,7 @@
   <div class="container">
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-6 mb-4">
-        <h2 class="fw-bold text-dark mb-3">Internet internacional incluída no seu seguro</h2>
+        <h2 class="fw-bold text-dark mb-3">Chip Grátis <br>Internet internacional incluída no seu seguro</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
           Viaje com conectividade, suporte completo e praticidade.
         </h5>
@@ -186,7 +186,7 @@
         <ul>
           <li><strong>Clientes elegíveis:</strong> Tokio Marine com pagamento à vista do Plano EUROPA ou MUNDO.</li>
           <li><strong>Como resgatar:</strong> Pela webstore com o número da apólice paga.</li>
-          <li><strong>Plano de dados:</strong> 1GB por até 14 dias (ou até consumo).</li>
+          <li><strong>Plano de dados:</strong>1GB até 14 dias ou consumo total, o que ocorrer primeiro.</li>
           <li><strong>Cobertura:</strong> EUA e países da EUROPA.</li>
           <li><strong>Período de uso:</strong> Cliente escolhe a ativação (até 6 meses).</li>
           <li><strong>eSIM:</strong> Envio por e-mail ou WhatsApp (gratuito).</li>
@@ -455,7 +455,6 @@
           • Escolha o destino: EUA ou Europa<br>
           • Escolha: eSIM ou Chip Físico<br>
           • Realize o cadastro e finalize o resgate<br>
-          • Você receberá o Chip gratuitamente!
         </div>
       </div>
     </div>
@@ -503,7 +502,7 @@
           <strong>Chip Físico (opcional):</strong><br>
           - Carta Registrada: até 12 dias úteis – U$2.00<br>
           - SEDEX: até 7 dias úteis – U$7.00<br>
-          - Retirada em aeroporto: até 72h – U$5.00<br>
+          - Retirada em aeroporto: U$5.00<br>
           *Taxa cobrada no momento do cadastro.
         </div>
       </div>
@@ -557,7 +556,7 @@
       </h2>
       <div id="gratis10" class="accordion-collapse collapse">
         <div class="accordion-body">
-          Basta entrar em contato com a Central de Atendimento do Chip Internacional mysimtravel para planos, formas de pagamento e ativação.
+          Entrar em contato com a Central de Atendimento do Chip Internacional mysimtravel para planos, formas de pagamento e ativação.
         </div>
       </div>
     </div>
@@ -575,7 +574,7 @@
     <div class="row justify-content-center text-center mb-4">
       <div class="col-lg-10">
         <h3 class="fw-bold mb-4" style="color: #1e7c6b;">Resumo dos Benefícios</h3>
-        <p class="text-muted">Compare de forma simples os dois tipos de Chip oferecidos pela mysimtravel em parceria com a Tokio Marine.</p>
+        <p class="text-muted">Compare de forma simples os dois tipos de Chip oferecidos pelo mysimtravel em parceria com a Tokio Marine.</p>
       </div>
     </div>
 
@@ -588,7 +587,7 @@
             <li><strong>Resgate:</strong> Imediato pela webstore com número da apólice</li>
             <li><strong>Plano de dados:</strong> 1GB válido por até 14 dias</li>
             <li><strong>Cobertura:</strong> Estados Unidos e países da Europa</li>
-            <li><strong>Período de uso:</strong> Até 12 meses após resgate</li>
+            <li><strong>Período de uso:</strong> Até 06 meses após resgate</li>
           </ul>
         </div>
       </div>
@@ -600,7 +599,7 @@
             <li><strong>Benefício:</strong> 20% de desconto em todos os planos mysimtravel</li>
             <li><strong>Resgate:</strong> Imediato via webstore oficial</li>
             <li><strong>Cobertura:</strong> Toda a cobertura global</li>
-            <li><strong>Período de uso:</strong> Até 24 meses após resgate</li>
+            <li><strong>Período de uso:</strong> Até 06 meses após resgate</li>
           </ul>
         </div>
       </div>
@@ -635,17 +634,14 @@
           <td><a href="mailto:vendas.brasil@sgmobile.com.br">vendas.brasil@sgmobile.com.br</a> — Seg a Sex das 9h às 17h30</td>
         </tr>
         <tr>
+          <td>Telefone comercial</td>
+          <td><a>(11) 2309 5655</a> — Seg a Sex das 9h às 17h30</td>
+        </tr>
+        <tr>
           <td>Endereço:</td>
           <td>Av. Domingos de Morais, 2187, Cj 706 – Vila Mariana – SP</td>
         </tr>
       </table>
-
-      <div class="contato-link">
-        Para mais detalhes, acesse: <br>
-        <a href="https://mystore.mysimtravel.com/chiptokio" target="_blank">
-          Loja mysimtravel
-        </a>
-      </div>
     </div>
   </div>
 </section>
