--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav gap-lg-4 gap-3 text-center">
         <li class="nav-item">
-          <a class="nav-link" href="#seguro-nacional">Chip Desconto 20%</a>
+          <a class="nav-link" href="#container-chip20">Chip Desconto 20%</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#detalhe-internacional">Chip Grátis</a>
+          <a class="nav-link" href="#container-chipgratis">Chip Grátis</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#faqAccordion">FAQ</a>
@@ -52,9 +52,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 d-flex flex-column justify-content-center" data-sr>
-        <h5 class="text-uppercase fw-bold mb-3" style="color: #e7c85a;">Parceria oficial</h5>
+        <h5 class="text-uppercase fw-bold mb-3" style="color: #e7c85a;">Seguro Viagem</h5>
         <h1 class="display-4 fw-bold mb-4">Viaje conectado com<br><span style="color: #e7c85a;">Tokio Marine e mysimtravel</span></h1>
-        <p class="lead mb-3">Receba seu chip internacional para navegar com tranquilidade no seu destino.</p>
+        <p class="lead mb-3">Receba seu chip internacional para <strong>viajar</strong> com tranquilidade ao seu destino.</p>
         <p class="fw-bold">Atendimento exclusivo e suporte completo para sua viagem.</p>
       </div>
     </div>
@@ -76,12 +76,12 @@
             <h3 class="mb-0">Chip com 20% de desconto</h3>
           </div>
           <p class="text-muted">
-            Benefício para clientes Tokio Marine que comprarem qualquer Plano de Seguro Viagem Nacional ou Internacional.
+            Benefício para clientes Tokio Marine que contratarem os planos disponíveis no Seguro Viagem Internacional.
           </p>
           <p class="text-muted">
             Saiba mais sobre os planos e destinos disponíveis.
           </p>
-          <a href="#detalhe-nacional" class="btn mt-3">Conhecer</a>
+          <a href="#faq" class="btn mt-3">Conhecer</a>
         </div>
       </div>
       <div class="col-md-6 col-lg-5">
@@ -93,12 +93,12 @@
             <h3 class="mb-0">Chip Grátis</h3>
           </div>
           <p class="text-muted">
-            <strong>Benefício exclusivo</strong> para Clientes Seguro Viagem com pagamento <strong>à vista</strong> nos Planos EUROPA ou Plano MUNDO.
+            <strong>Benefício</strong> exclusivo para Clientes Tokio Marine que contratarem o Seguro Viagem com pagamento à vista nos Planos <strong>EUROPA</strong> ou Plano <strong></strong>MUNDO</strong>.
           </p>
           <p class="text-muted">
             Saiba mais sobre os planos e destinos disponíveis.
           </p>
-          <a href="#detalhe-internacional" class="btn mt-3">Conhecer</a>
+          <a href="#faq" class="btn mt-3" id="container-chip20">Conhecer</a>
         </div>
       </div>
     </div>
@@ -112,49 +112,22 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 mb-4">
-        <h2 class="fw-bold text-dark mb-3">Chip com 20% de desconto <br>Você garantiu um benefício exclusivo</h2>
+        <h2 class="fw-bold text-dark mb-3">Chip com 20% de desconto <br>Não perca esse beneficio exclusivo</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
-          O seu Seguro Viagem Tokio Marine inclui conectividade internacional com a mysimtravel.
+          O Seguro Viagem Internacional da Tokio Marine inclui conectividade com a mysimtravel.
         </h5>
         <p class="text-muted">
-          Como cliente Tokio Marine, você já tem acesso ao <strong>chip internacional mysimtravel</strong> — um benefício pensado para facilitar sua jornada fora do país.
+          Como cliente Tokio Marine, você tem 20% de desconto na compra do <strong>chip internacional mysimtravel</strong> — Esse é um benefício pensado para facilitar sua viagem fora do país.
         </p>
         <p class="text-muted">
-          Com ele, você navega com segurança, escolhe entre chip físico ou eSIM, e ainda conta com suporte técnico completo para ativação, recarga e instalação.
+          Viagem com segurança, escolhendo entre chip físico ou eSIM, e ainda contando com suporte técnico completo para ativação, recarga e instalação.
         </p>
         <p class="text-muted">
-          Tudo isso com cobertura em mais de 150 países. Aproveite sua viagem com conectividade garantida.
+          Tudo isso com cobertura em mais de 150 países. Aproveite sua viagem e garanta o seu Chip.
         </p>
       </div>
       <div class="col-md-6 text-center">
         <img src="banner-2.png" class="img-fluid rounded shadow" alt="Benefício chip internacional">
-      </div>
-    </div>
-  </div>
-</section>
-
-
- <!-- Section 4 - Chip mysimtravel incluso -->
-<section class="section py-5" id="detalhe-internacional">
-  <div class="container">
-    <div class="row align-items-center flex-md-row-reverse">
-      <div class="col-md-6 mb-4">
-        <h2 class="fw-bold text-dark mb-3">Chip Grátis <br>Internet internacional incluída no seu seguro</h2>
-        <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
-          Viaje com conectividade, suporte completo e praticidade.
-        </h5>
-        <p class="text-muted">
-          Seu <strong>chip internacional mysimtravel</strong> está incluso como parte dos benefícios oferecidos pela Tokio Marine para clientes que já contrataram o Seguro Viagem.
-        </p>
-        <p class="text-muted">
-          Você conta com suporte por WhatsApp, e-mail e telefone para ativação, instalação e recarga — tudo 100% online, com atendimento humano e especializado.
-        </p>
-        <p class="text-muted">
-          Uma solução completa para quem deseja estar sempre conectado e bem assistido durante sua viagem.
-        </p>
-      </div>
-      <div class="col-md-6 text-center">
-        <img src="banner-3.png" class="img-fluid rounded shadow" alt="Chip mysimtravel incluso no seguro">
       </div>
     </div>
   </div>
@@ -171,6 +144,7 @@
           <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine com qualquer plano de seguro viagem.</li>
           <li><strong>Benefício:</strong> 20% de desconto nos planos disponíveis.</li>
           <li><strong>Como resgatar:</strong> Imediato pela webstore oficial.</li>
+          <li><strong>Plano de dados:</strong>Plano que estiver disponível.</li>
           <li><strong>Cobertura:</strong> Todos os destinos da cobertura global.</li>
           <li><strong>Período de uso:</strong> Cliente escolhe a data de ativação.</li>
           <li><strong>Formato:</strong> Virtual eSIM ou chip físico.</li>
@@ -179,13 +153,50 @@
         </ul>
         <a href="https://mystore.mysimtravel.com/tokiomarineviagem" class="btn" target="_blank">Resgatar meu benefício</a>
       </div>
+    </div>
+  </div>
+</section>
 
+
+ <!-- Section 4 - Chip mysimtravel incluso -->
+<section class="section py-5" id="detalhe-internacional">
+  <div class="container">
+    <div class="row align-items-center flex-md-row-reverse">
+      <div class="col-md-6 mb-4" id="container-chipgratis">
+        <h2 class="fw-bold text-dark mb-3">Chip Grátis <br>Benefício incluído em seu seguro</h2>
+        <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
+          Viaje com tranquilidade, sem custos adicionais.
+        </h5>
+        <p class="text-muted">
+          Com a contratação do seu seguro Viagem Internacional, o chip mysimtravel está incluso como parte dos benefícios oferecidos pela Tokio Marine.
+        </p>
+        <p class="text-muted">
+          Agora, você conta com suporte por WhatsApp, E-mail e Telefone para ativação, instalação e recarga — tudo 100% online, com atendimento humanizado e especializado.
+        </p>
+        <p class="text-muted">
+          Uma solução completa para quem deseja estar sempre conectado, bem assistido durante sua viagem e com cobertura em mais de 150 países.
+        </p>
+        <p class="text-muted">
+          Aproveite sua viagem e ative o seu Chip.
+        </p>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="banner-3.png" class="img-fluid rounded shadow" alt="Chip mysimtravel incluso no seguro">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="sessao-chips">
+  <div class="container">
+    <div class="grid-beneficios">
       <!-- CHIP GRÁTIS -->
       <div class="card-chip">
         <h4>Chip Internacional <span>mysimtravel grátis</span></h4>
         <ul>
-          <li><strong>Clientes elegíveis:</strong> Tokio Marine com pagamento à vista do Plano EUROPA ou MUNDO.</li>
-          <li><strong>Como resgatar:</strong> Pela webstore com o número da apólice paga.</li>
+          <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine que contrataram o seguro Viagem Internacional com pagamento à vista nos Planos EUROPA ou MUNDO.</li>
+          <li><strong>Beneficio:</strong> Chip Gratis</li>
+          <li><strong>Como resgatar:</strong> Pela Webstore Oficial informando o número da apólice paga.</li>
           <li><strong>Plano de dados:</strong>1GB até 14 dias ou consumo total, o que ocorrer primeiro.</li>
           <li><strong>Cobertura:</strong> EUA e países da EUROPA.</li>
           <li><strong>Período de uso:</strong> Cliente escolhe a ativação (até 6 meses).</li>
@@ -201,7 +212,7 @@
 </section>
 
   <!-- FAQ -->
-  <section class="faq-duplo">
+  <section class="faq-duplo" id="faq">
   <div class="container">
     <h2 class="faq-title">Perguntas Frequentes</h2>
     <div class="faq-columns">
@@ -417,8 +428,7 @@
       </h2>
       <div id="gratis1" class="accordion-collapse collapse show">
         <div class="accordion-body">
-          São elegíveis ao Chip grátis os clientes Tokio Marine que pagarem à vista o Plano Seguro Viagem EUROPA ou MUNDO.<br>
-          <strong>Viagem em família:</strong> O benefício pode ser habilitado por apólice emitida, sendo permitido 1 Chip grátis por CPF.
+          São elegíveis ao Chip grátis os clientes Tokio Marine que contrataram o Seguro Viagem Internacional nos planos EUROPA ou MUNDO com pagamento à vista.
         </div>
       </div>
     </div>
@@ -452,9 +462,22 @@
         <div class="accordion-body">
           • Acesse: <a href="https://mystore.mysimtravel.com/tokiochip" target="_blank">https://mystore.mysimtravel.com/tokiochip</a><br>
           • Insira o número da apólice<br>
-          • Escolha o destino: EUA ou Europa<br>
+          • Escolha o destino: países disponíveis no plano mundo ou Europa<br>
           • Escolha: eSIM ou Chip Físico<br>
           • Realize o cadastro e finalize o resgate<br>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item mb-2">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#gratis3">
+          Viagem em Familia?
+        </button>
+      </h2>
+      <div id="gratis3" class="accordion-collapse collapse">
+        <div class="accordion-body">
+          <p>O benefício pode ser habilitado por apólice emitida, sendo permitido 1 chip grátis por CPF</p>
         </div>
       </div>
     </div>
@@ -468,7 +491,7 @@
       <div id="gratis4" class="accordion-collapse collapse">
         <div class="accordion-body">
           <strong>Estados Unidos</strong><br>
-          <strong>Europa:</strong> Alemanha, França, Itália, Espanha, Portugal, Reino Unido, Suíça, Holanda, Grécia, Irlanda, Polônia, Bélgica, Áustria, Noruega, Suécia, Dinamarca, Finlândia, Romênia, Croácia, Hungria, República Tcheca, Eslováquia, Eslovênia, Bulgária, Lituânia, Letônia, Estônia, Ucrânia, Rússia, Islândia, Chipre, Albânia, Bósnia, Montenegro, Malta, Sérvia e mais.
+          <strong>Europa:</strong> Alemanha, França, Itália, Espanha, Portugal, Reino Unido, Suíça, Holanda, Grécia, Irlanda, Polônia, Bélgica, Áustria, Noruega, Suécia, Dinamarca, Finlândia, Romênia, Croácia, Hungria, República Tcheca, Eslováquia, Eslovênia, Bulgária, Lituânia, Letônia, Estônia, Ucrânia, Rússia, Islândia, Chipre, Albânia, Bósnia, Montenegro, Malta, Sérvia
         </div>
       </div>
     </div>
@@ -586,7 +609,7 @@
             <li><strong>Clientes elegíveis:</strong> Pagamento à vista do Seguro Viagem Plano EUROPA ou MUNDO</li>
             <li><strong>Resgate:</strong> Imediato pela webstore com número da apólice</li>
             <li><strong>Plano de dados:</strong> 1GB válido por até 14 dias</li>
-            <li><strong>Cobertura:</strong> Estados Unidos e países da Europa</li>
+            <li><strong>Cobertura:</strong> países disponíveis no plano MUNDO ou EUROPA</li>
             <li><strong>Período de uso:</strong> Até 06 meses após resgate</li>
           </ul>
         </div>
@@ -700,7 +723,7 @@
           © 2025 mysimtravel & Tokio Marine – Todos os direitos reservados.
         </p>
         <p class="mb-0">
-          O registro deste plano na SUSEP não implica, por parte da Autarquia, incentivo ou recomendação à sua comercialização. Processo SUSEP: 15414.900155/2013-79.
+          O registro deste plano na SUSEP não implica, por parte da Autarquia, incentivo ou recomendação à sua comercialização. Processo SUSEP: 15414.631478/2022-13
         </p>
       </div>
     </div>
@@ -720,7 +743,22 @@
     });
   });
 </script>
+<script>
+  function trocarLogo() {
+    const logo = document.querySelector('.navbar-brand img');
+    if (window.innerWidth < 1000) {
+      logo.src = 'logo-responsivo.png';
+    } else {
+      logo.src = 'logo-site.png';
+    }
+  }
 
+  // Executa ao carregar a página
+  window.addEventListener('load', trocarLogo);
+
+  // Executa sempre que a tela for redimensionada
+  window.addEventListener('resize', trocarLogo);
+</script>
 
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
