--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<header class="navbar navbar-expand-lg bg-white fixed-top shadow-sm">
+<!-- <header class="navbar navbar-expand-lg bg-white fixed-top shadow-sm">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="logo-site.png" alt="mysimtravel" height="40">
@@ -44,7 +44,7 @@
       </ul>
     </div>
   </div>
-</header>
+</header> -->
 
 
 <!-- Hero Section (sem menção a desconto) -->
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 d-flex flex-column justify-content-center" data-sr>
-        <h5 class="text-uppercase fw-bold mb-3" style="color: #e7c85a;">Seguro Viagem</h5>
+        <h5 class="fw-bold mb-3" style="color: #e7c85a;">Seguro Viagem</h5>
         <h1 class="display-4 fw-bold mb-4">Viaje conectado com<br><span style="color: #e7c85a;">Tokio Marine e mysimtravel</span></h1>
         <p class="lead mb-3">Receba seu chip internacional para <strong>viajar</strong> com tranquilidade ao seu destino.</p>
         <p class="fw-bold">Atendimento exclusivo e suporte completo para sua viagem.</p>
@@ -141,7 +141,7 @@
       <div class="card-chip">
         <h4>Chip Internacional <span>mysimtravel com 20% de desconto</span></h4>
         <ul>
-          <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine com qualquer plano de seguro viagem.</li>
+          <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine com qualquer plano de Seguro Viagem.</li>
           <li><strong>Benefício:</strong> 20% de desconto nos planos disponíveis.</li>
           <li><strong>Como resgatar:</strong> Imediato pela webstore oficial.</li>
           <li><strong>Plano de dados:</strong>Plano que estiver disponível.</li>
@@ -168,7 +168,7 @@
           Viaje com tranquilidade, sem custos adicionais.
         </h5>
         <p class="text-muted">
-          Com a contratação do seu seguro Viagem Internacional, o chip mysimtravel está incluso como parte dos benefícios oferecidos pela Tokio Marine.
+          Com a contratação do seu Seguro Viagem Internacional, o chip mysimtravel está incluso como parte dos benefícios oferecidos pela Tokio Marine.
         </p>
         <p class="text-muted">
           Agora, você conta com suporte por WhatsApp, E-mail e Telefone para ativação, instalação e recarga — tudo 100% online, com atendimento humanizado e especializado.
@@ -194,7 +194,7 @@
       <div class="card-chip">
         <h4>Chip Internacional <span>mysimtravel grátis</span></h4>
         <ul>
-          <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine que contrataram o seguro Viagem Internacional com pagamento à vista nos Planos EUROPA ou MUNDO.</li>
+          <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine que contrataram o Seguro Viagem Internacional com pagamento à vista nos Planos EUROPA ou MUNDO.</li>
           <li><strong>Beneficio:</strong> Chip Gratis</li>
           <li><strong>Como resgatar:</strong> Pela Webstore Oficial informando o número da apólice paga.</li>
           <li><strong>Plano de dados:</strong>1GB até 14 dias ou consumo total, o que ocorrer primeiro.</li>
@@ -462,7 +462,7 @@
         <div class="accordion-body">
           • Acesse: <a href="https://mystore.mysimtravel.com/tokiochip" target="_blank">https://mystore.mysimtravel.com/tokiochip</a><br>
           • Insira o número da apólice<br>
-          • Escolha o destino: países disponíveis no plano mundo ou Europa<br>
+          • Escolha o destino: países disponíveis no Plano Mundo ou Europa<br>
           • Escolha: eSIM ou Chip Físico<br>
           • Realize o cadastro e finalize o resgate<br>
         </div>
