--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="col-lg-6 d-flex flex-column justify-content-center" data-sr>
         <h5 class="fw-bold mb-3" style="color: #e7c85a;">Seguro Viagem</h5>
         <h1 class="display-4 fw-bold mb-4">Viaje conectado com<br><span style="color: #e7c85a;">Tokio Marine e mysimtravel</span></h1>
-        <p class="lead mb-3">Receba seu chip internacional para <strong>viajar</strong> com tranquilidade ao seu destino.</p>
+        <p class="lead mb-3">Receba seu Chip internacional para <strong>viajar</strong> com tranquilidade ao seu destino.</p>
         <p class="fw-bold">Atendimento exclusivo e suporte completo para sua viagem.</p>
       </div>
     </div>
@@ -64,8 +64,7 @@
 <section class="section py-5" style="background-color: #f5f7f9;">
   <div class="container text-center">
     <h2 class="mb-3 fw-bold">Escolha o benefício ideal para sua viagem</h2>
-    <p class="mb-5 text-muted">Clientes Tokio Marine têm acesso exclusivo a chips internacionais com condições especiais. Veja qual opção é a melhor para você:</p>
-
+    <p class="mb-5 text-muted">Clientes Tokio Marine têm acesso exclusivo a chips internacionais mysimtravel com condições especiais. Veja qual opção é a melhor para você:</p>
     <div class="row justify-content-center g-4">
       <div class="col-md-6 col-lg-5">
         <div class="card seguro-card h-100 text-start">
@@ -114,10 +113,10 @@
       <div class="col-md-6 mb-4">
         <h2 class="fw-bold text-dark mb-3">Chip com 20% de desconto <br>Não perca esse beneficio exclusivo</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
-          O Seguro Viagem Internacional da Tokio Marine inclui conectividade com a mysimtravel.
+          O Seguro Viagem Internacional da Tokio Marine inclui conectividade com o Chip internacional mysimtravel.
         </h5>
         <p class="text-muted">
-          Como cliente Tokio Marine, você tem 20% de desconto na compra do <strong>chip internacional mysimtravel</strong> — Esse é um benefício pensado para facilitar sua viagem fora do país.
+          Como cliente Tokio Marine, você tem 20% de desconto na compra do <strong>Chip internacional mysimtravel</strong> — Esse é um benefício pensado para facilitar sua viagem fora do país.
         </p>
         <p class="text-muted">
           Viagem com segurança, escolhendo entre chip físico ou eSIM, e ainda contando com suporte técnico completo para ativação, recarga e instalação.
@@ -127,7 +126,7 @@
         </p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="banner-2.png" class="img-fluid rounded shadow" alt="Benefício chip internacional">
+        <img src="banner-2.png" class="img-fluid rounded shadow" alt="Benefício Chip internacional">
       </div>
     </div>
   </div>
@@ -139,7 +138,7 @@
 
       <!-- CHIP COM DESCONTO -->
       <div class="card-chip">
-        <h4>Chip Internacional <span>mysimtravel com 20% de desconto</span></h4>
+        <h4>Chip internacional <span>mysimtravel com 20% de desconto</span></h4>
         <ul>
           <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine com qualquer plano de Seguro Viagem.</li>
           <li><strong>Benefício:</strong> 20% de desconto nos planos disponíveis.</li>
@@ -158,7 +157,7 @@
 </section>
 
 
- <!-- Section 4 - Chip mysimtravel incluso -->
+ <!-- Section 4 - Chip internacional mysimtravel incluso -->
 <section class="section py-5" id="detalhe-internacional">
   <div class="container">
     <div class="row align-items-center flex-md-row-reverse">
@@ -168,7 +167,7 @@
           Viaje com tranquilidade, sem custos adicionais.
         </h5>
         <p class="text-muted">
-          Com a contratação do seu Seguro Viagem Internacional, o chip mysimtravel está incluso como parte dos benefícios oferecidos pela Tokio Marine.
+          Com a contratação do seu Seguro Viagem Internacional, o Chip internacional mysimtravel está incluso como parte dos benefícios oferecidos pela Tokio Marine.
         </p>
         <p class="text-muted">
           Agora, você conta com suporte por WhatsApp, E-mail e Telefone para ativação, instalação e recarga — tudo 100% online, com atendimento humanizado e especializado.
@@ -181,7 +180,7 @@
         </p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="banner-3.png" class="img-fluid rounded shadow" alt="Chip mysimtravel incluso no seguro">
+        <img src="banner-3.png" class="img-fluid rounded shadow" alt="Chip internacional mysimtravel incluso no seguro">
       </div>
     </div>
   </div>
@@ -192,7 +191,7 @@
     <div class="grid-beneficios">
       <!-- CHIP GRÁTIS -->
       <div class="card-chip">
-        <h4>Chip Internacional <span>mysimtravel grátis</span></h4>
+        <h4>Chip internacional <span>mysimtravel grátis</span></h4>
         <ul>
           <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine que contrataram o Seguro Viagem Internacional com pagamento à vista nos Planos EUROPA ou MUNDO.</li>
           <li><strong>Beneficio:</strong> Chip Gratis</li>
@@ -220,7 +219,7 @@
       <!-- FAQ GERAL -->
       <!-- FAQ GERAL (Atualizado) -->
 <div class="faq-box">
-  <h4>FAQ Geral – Chip Internacional</h4>
+  <h4>FAQ Geral – Chip internacional</h4>
   <div class="accordion" id="faqGeral">
     
     <div class="accordion-item mb-2">
@@ -270,7 +269,7 @@
       </h2>
       <div id="geral4" class="accordion-collapse collapse">
         <div class="accordion-body">
-          Basta entrar em contato com a Central de Atendimento do Chip Internacional mysimtravel.
+          Basta entrar em contato com a Central de Atendimento do Chip internacional mysimtravel.
         </div>
       </div>
     </div>
@@ -462,7 +461,7 @@
         <div class="accordion-body">
           • Acesse: <a href="https://mystore.mysimtravel.com/tokiochip" target="_blank">https://mystore.mysimtravel.com/tokiochip</a><br>
           • Insira o número da apólice<br>
-          • Escolha o destino: países disponíveis no Plano Mundo ou Europa<br>
+          • Escolha o destino: Estados Unidos ou Europa<br>
           • Escolha: eSIM ou Chip Físico<br>
           • Realize o cadastro e finalize o resgate<br>
         </div>
@@ -579,7 +578,7 @@
       </h2>
       <div id="gratis10" class="accordion-collapse collapse">
         <div class="accordion-body">
-          Entrar em contato com a Central de Atendimento do Chip Internacional mysimtravel para planos, formas de pagamento e ativação.
+          Entrar em contato com a Central de Atendimento do Chip internacional mysimtravel para planos, formas de pagamento e ativação.
         </div>
       </div>
     </div>
@@ -604,12 +603,12 @@
     <div class="row text-start gy-4">
       <div class="col-md-6">
         <div class="p-4 border rounded shadow-sm h-100">
-          <h5 class="fw-bold mb-3">Chip Internacional <span class="text-success">Grátis</span></h5>
+          <h5 class="fw-bold mb-3">Chip internacional <span class="text-success">Grátis</span></h5>
           <ul class="text-muted ps-3 mb-0">
             <li><strong>Clientes elegíveis:</strong> Pagamento à vista do Seguro Viagem Plano EUROPA ou MUNDO</li>
             <li><strong>Resgate:</strong> Imediato pela webstore com número da apólice</li>
             <li><strong>Plano de dados:</strong> 1GB válido por até 14 dias</li>
-            <li><strong>Cobertura:</strong> países disponíveis no plano MUNDO ou EUROPA</li>
+            <li><strong>Cobertura:</strong> Estados Unidos ou países da EUROPA</li>
             <li><strong>Período de uso:</strong> Até 06 meses após resgate</li>
           </ul>
         </div>
@@ -703,13 +702,6 @@
           <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
           <a href="#" class="footer-icon"><i class="fab fa-youtube"></i></a>
           <a href="#" class="footer-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p class="small mt-3 mb-0">
-          Aplicativo disponível:
-        </p>
-        <div class="d-flex gap-2 mt-2">
-          <img src="app-store.png" alt="App Store" height="32">
-          <img src="google-play.png" alt="Google Play" height="32">
         </div>
       </div>
     </div>
