--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 </head>
 <body>
 
-<!-- <header class="navbar navbar-expand-lg bg-white fixed-top shadow-sm">
+<header class="navbar navbar-expand-lg bg-white shadow-sm">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="logo-site.png" alt="mysimtravel" height="40">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav gap-lg-4 gap-3 text-center">
+    </button> -->
+    <!-- <div class="collapse navbar-collapse justify-content-end" id="navbarNav"> -->
+      <!-- <ul class="navbar-nav gap-lg-4 gap-3 text-center">
         <li class="nav-item">
           <a class="nav-link" href="#container-chip20">Chip Desconto 20%</a>
         </li>
@@ -41,10 +41,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#faqAccordion">FAQ</a>
         </li>
-      </ul>
-    </div>
+      </ul> -->
+    <!-- </div> -->
   </div>
-</header> -->
+</header>
 
 
 <!-- Hero Section (sem menção a desconto) -->
@@ -65,44 +65,53 @@
   <div class="container text-center">
     <h2 class="mb-3 fw-bold">Escolha o benefício ideal para sua viagem</h2>
     <p class="mb-5 text-muted">Clientes Tokio Marine têm acesso exclusivo a chips internacionais mysimtravel com condições especiais. Veja qual opção é a melhor para você:</p>
-    <div class="row justify-content-center g-4">
+    <div class="row justify-content-center align-items-stretch g-4">
       <div class="col-md-6 col-lg-5">
-        <div class="card seguro-card h-100 text-start">
+        <div class="card seguro-card h-100 d-flex flex-column text-start">
           <div class="d-flex align-items-center mb-3">
             <div class="icon-circle me-3">
               <i class="fas fa-umbrella-beach fa-lg text-white"></i>
             </div>
             <h3 class="mb-0">Chip com 20% de desconto</h3>
           </div>
-          <p class="text-muted">
-            Benefício para clientes Tokio Marine que contratarem os planos disponíveis no Seguro Viagem Internacional.
-          </p>
-          <p class="text-muted">
-            Saiba mais sobre os planos e destinos disponíveis.
-          </p>
-          <a href="#faq" class="btn mt-3">Conhecer</a>
+          <div class="flex-grow-1 d-flex flex-column justify-content-between">
+            <div>
+              <p class="text-muted">
+                Benefício para clientes Tokio Marine que contratarem os planos disponíveis no Seguro Viagem Internacional.
+              </p>
+              <p class="text-muted">
+                Saiba mais sobre os planos e destinos disponíveis.
+              </p>
+            </div>
+            <a href="#faq" class="btn mt-3 w-100">Conhecer</a>
+          </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-5">
-        <div class="card seguro-card h-100 text-start">
+        <div class="card seguro-card h-100 d-flex flex-column text-start">
           <div class="d-flex align-items-center mb-3">
             <div class="icon-circle me-3">
               <i class="fas fa-globe-americas fa-lg text-white"></i>
             </div>
             <h3 class="mb-0">Chip Grátis</h3>
           </div>
-          <p class="text-muted">
-            <strong>Benefício</strong> exclusivo para Clientes Tokio Marine que contratarem o Seguro Viagem com pagamento à vista nos Planos <strong>EUROPA</strong> ou Plano <strong></strong>MUNDO</strong>.
-          </p>
-          <p class="text-muted">
-            Saiba mais sobre os planos e destinos disponíveis.
-          </p>
-          <a href="#faq" class="btn mt-3" id="container-chip20">Conhecer</a>
+          <div class="flex-grow-1 d-flex flex-column justify-content-between">
+            <div>
+              <p class="text-muted">
+                Benefício exclusivo para Clientes Tokio Marine que contratarem o Seguro Viagem com pagamento à vista nos Planos EUROPA ou Plano MUNDO.
+              </p>
+              <p class="text-muted">
+                Saiba mais sobre os planos e destinos disponíveis.
+              </p>
+            </div>
+            <a href="#faq" class="btn mt-3 w-100" id="container-chip20">Conhecer</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
@@ -116,7 +125,7 @@
           O Seguro Viagem Internacional da Tokio Marine inclui conectividade com o Chip internacional mysimtravel.
         </h5>
         <p class="text-muted">
-          Como cliente Tokio Marine, você tem 20% de desconto na compra do <strong>Chip internacional mysimtravel</strong> — Esse é um benefício pensado para facilitar sua viagem fora do país.
+          Como cliente Tokio Marine, você tem 20% de desconto na compra do Chip internacional mysimtravel, Esse é um benefício pensado para facilitar sua viagem fora do país.
         </p>
         <p class="text-muted">
           Viagem com segurança, escolhendo entre chip físico ou eSIM, e ainda contando com suporte técnico completo para ativação, recarga e instalação.
@@ -162,7 +171,7 @@
   <div class="container">
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-6 mb-4" id="container-chipgratis">
-        <h2 class="fw-bold text-dark mb-3">Chip Grátis <br>Benefício incluído em seu seguro</h2>
+        <h2 class="fw-bold text-dark mb-3">Chip Grátis <br>Benefício incluso em seu Seguro</h2>
         <h5 class="fw-semibold mb-4" style="color: #1e7c6b;">
           Viaje com tranquilidade, sem custos adicionais.
         </h5>
@@ -170,7 +179,7 @@
           Com a contratação do seu Seguro Viagem Internacional, o Chip internacional mysimtravel está incluso como parte dos benefícios oferecidos pela Tokio Marine.
         </p>
         <p class="text-muted">
-          Agora, você conta com suporte por WhatsApp, E-mail e Telefone para ativação, instalação e recarga — tudo 100% online, com atendimento humanizado e especializado.
+          Agora, você conta com suporte por WhatsApp, E-mail e Telefone para ativação, instalação e recarga tudo 100% online, com atendimento humanizado e especializado.
         </p>
         <p class="text-muted">
           Uma solução completa para quem deseja estar sempre conectado, bem assistido durante sua viagem e com cobertura em mais de 150 países.
@@ -219,7 +228,7 @@
       <!-- FAQ GERAL -->
       <!-- FAQ GERAL (Atualizado) -->
 <div class="faq-box">
-  <h4>FAQ Geral – Chip internacional</h4>
+  <h4>FAQ Geral</h4>
   <div class="accordion" id="faqGeral">
     
     <div class="accordion-item mb-2">
@@ -470,11 +479,11 @@
 
     <div class="accordion-item mb-2">
       <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#gratis3">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#gratis11">
           Viagem em Familia?
         </button>
       </h2>
-      <div id="gratis3" class="accordion-collapse collapse">
+      <div id="gratis11" class="accordion-collapse collapse">
         <div class="accordion-body">
           <p>O benefício pode ser habilitado por apólice emitida, sendo permitido 1 chip grátis por CPF</p>
         </div>
@@ -672,8 +681,7 @@
   <!-- NOVO FOOTER -->
 <footer class="footer-tokio">
   <div class="container py-4">
-    <div class="row text-white gy-4">
-      <!-- Coluna 1 -->
+    <!-- <div class="row text-white gy-4">
       <div class="col-md-4">
         <h6 class="text-uppercase fw-bold">Institucional</h6>
         <ul class="list-unstyled small">
@@ -683,7 +691,6 @@
         </ul>
       </div>
 
-      <!-- Coluna 2 -->
       <div class="col-md-4">
         <h6 class="text-uppercase fw-bold">Canais e Atendimento</h6>
         <ul class="list-unstyled small">
@@ -694,7 +701,6 @@
         </ul>
       </div>
 
-      <!-- Coluna 3 -->
       <div class="col-md-4">
         <h6 class="text-uppercase fw-bold">Siga-nos</h6>
         <div class="d-flex gap-3">
@@ -704,9 +710,9 @@
           <a href="#" class="footer-icon"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <hr class="border-secondary my-4">
+   <!--  <hr class="border-secondary my-4"> -->
 
     <!-- Texto Legal -->
     <div class="row text-white small">
@@ -715,7 +721,7 @@
           © 2025 mysimtravel & Tokio Marine – Todos os direitos reservados.
         </p>
         <p class="mb-0">
-          O registro deste plano na SUSEP não implica, por parte da Autarquia, incentivo ou recomendação à sua comercialização. Processo SUSEP: 15414.631478/2022-13
+          O registro deste plano na SUSEP não implica, por parte da Autarquia, incentivo ou recomendação à sua comercialização.
         </p>
       </div>
     </div>
