--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
     <div class="row text-white small">
       <div class="col-md-12 text-center">
         <p class="mb-2">
-          © 2025 mysimtravel & Tokio Marine – Todos os direitos reservados.
+          © 2025 mysimtravel– Todos os direitos reservados.
         </p>
         <p class="mb-0">
           O registro deste plano na SUSEP não implica, por parte da Autarquia, incentivo ou recomendação à sua comercialização.
